Проверка автозапуска в Jenkins после изменений

--- a/login.html
+++ b/login.html
@@ -41,6 +41,7 @@
 	<td>Welcome - open-eshop</td>
 	<td></td>
 </tr>
+<!--Изменение для проверки автозапуска в Jenkins-->
 </tbody></table>
 </body>
 </html>
